@@ -17,6 +17,7 @@ Version 0.4c
  - Kicksand replaced
  - FocusStrike replaced
  - Backstab replaced
+ - Ensnare replaced
 
 --------------------------------------------
              PREVIOUS VERSIONS
